# Cell-Vacuole-Tracking

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  execution_trace.md  main.py  plan.md  pyproject.toml  ui_plan.md
config/: pipeline_params.yaml
docs/: performance_optimization.md  test_log.md  testing.md  tiff_report.md
sample/: Group 1_wellA1_RI_MIP_stitched.csv  cell_summary.csv  summary.csv  tracking_lengths.csv  tracking_positions.csv  tracking_steps.csv  tracking_summary.csv
src/: pipeline.py
src/legacy/: bubble_method_compare.py  bubble_qc_sweep.py
src/napari_plugin/: __init__.py  _analysis.py  _layer_utils.py  _widget.py  _worker.py  napari.yaml
src/pipeline/: pipeline.py
src/tests/: bubble_frame_preproc_test.py  bubble_param_sweep.py  bubble_single_cell_test.py  cellpose_frame_test.py  overlay_from_npz.py  param_sweep.py  track_single_cell.py  track_single_cell_animation.py
