[project]
name = "cell-vacuole-tracking"
version = "0.1.0"
description = "Pipeline for segmenting cells, tracking them over time, and detecting intracellular bubbles."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Chi Ru Chan", email = "chiruchan@example.com"}]
license = {text = "MIT"}
dependencies = [
    "cellpose",
    "laptrack",
    "pillow",
    "scikit-image",
    "tifffile",
    "numpy",
    "pandas",
    "tqdm",
    "matplotlib",
    "scipy",
    "networkx",
    "cython",
    "opencv-python",
    "pyyaml",
    "napari[all]>=0.4.19",
    "magicgui>=0.8.0",
    "qtpy",
    "superqt",
]

[project.entry-points."napari.manifest"]
cell-vacuole-tracker = "src.napari_plugin:napari.yaml"

[dependency-groups]
dev = [
    "pytest",
]
